--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "svg-to-vue-component": "^0.3.8",
     "sweetalert2": "^9.4.3",
     "vue-masked-input": "^0.5.2",
-    "vue-template-compiler": "^2.6.10"
+    "vue-template-compiler": "^2.6.10",
+    "vuelidate": "^0.7.4"
   },
   "postcss": {
     "plugins": {
